NIHVIVO-965: Corrected Bad buttons alignment when creating a NEW password

--- a/webapp/web/css/login.css
+++ b/webapp/web/css/login.css
@@ -179,4 +179,9 @@ font-size:0.8em;
 color:#615e5e;	
 }
 
+.or{
+	display:inline;
+	vertical-align:middle;
+}
+
 
